--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geojson.lib.routeboxer",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "Apache-2.0",
   "main": "./lib/geojson.lib.routeboxer",
   "homepage": "https://github.com/luscus/geojson.lib.routeboxer",
@@ -16,7 +16,7 @@
     "lib"
   ],
   "dependencies": {
-    "geojson.lib": "0.0.10"
+    "geojson.lib": "^0.0.11"
   },
   "devDependencies": {
     "grunt": "0.4.5",
